@@ -30,6 +30,11 @@ sub create($%)
 	$self;
 }
 
+sub _summary(%)
+{	my $self = shift;
+	$self->SUPER::_summary(@_);
+}
+
 #-------------
 =section Attributes
 =cut
